-- New changes in the ui and backend. Added a simple legend. Range creation is buggy and needs further development. -- Also, Menu can be toggled between hidden/visible states, effective after this commit

--- a/src/main/webapp/css/menu-style.css
+++ b/src/main/webapp/css/menu-style.css
@@ -277,3 +277,6 @@ a.active {
     -moz-transition: -moz-transform 0.3s;
     transition: transform 0.3s;
 }
+.inner-ul-menu{
+    background-color: #F6F6F6;
+}
